2007-06-26  Alp Toker  <alp.toker@collabora.co.uk>

        Reviewed and landed by Anders.

        http://bugs.webkit.org/show_bug.cgi?id=14416
        Content does not render fully in some cases

        Fix mismatched calls to cairo_save/restore due to an early method return.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawLine):

2007-06-26  Tristan O'Tierney  <tristan@apple.com>

        Reviewed by John Sullivan.

        Added two accessor functions for <rdar://problem/4119138>

        * bindings/objc/DOMHTML.mm:
        (-[DOMHTMLInputElement _isEdited]):
        (-[DOMHTMLTextAreaElement _isEdited]):
        Added an accessor to the isEdited value of a DOM node's render object

        * bindings/objc/DOMPrivate.h:
        Added header definitions for _isEdited

2007-06-26  Sam Weinig  <sam@webkit.org>

        Fix Win32 build.

        * WebCore.vcproj/WebCore.vcproj:

2007-06-26  Sam Weinig  <sam@webkit.org>

        Fix Qt and Gdk builds.

        * WebCore.pro:

2007-06-26  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=14111
        Autogenerate Event JS binding

        - Moves the dataTransfer method into MouseEvent where it should be.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSEventCustom.cpp: Added.
        (WebCore::JSEvent::clipboardData):
        (WebCore::toJS):
        * bindings/js/JSEventTargetNode.cpp:
        * bindings/js/JSXMLHttpRequest.cpp:
        * bindings/js/kjs_events.cpp:
        * bindings/js/kjs_events.h:
        * bindings/objc/DOMUtility.mm:
        (KJS::createDOMWrapper):
        * bindings/scripts/CodeGeneratorJS.pm:
        * dom/Event.h:
        (WebCore::Event::returnValue):
        (WebCore::Event::setReturnValue):
        (WebCore::Event::clipboardData):
        * dom/Event.idl:
        * dom/MouseEvent.h:
        (WebCore::MouseEvent::dataTransfer):